--- a/Xooa.yaml
+++ b/Xooa.yaml
@@ -11,7 +11,7 @@
 #     README:              -> Path to the documentation of the smart contract App [Optional Parameter]
 
 Apps:
-  Xooa-Get-Set:
+  CI-Test-SmartContract:
     Name: Get-Set
     Description: Xooa Get Set Smart Contract
     path: /get-set/smartcontract
@@ -23,39 +23,4 @@ Apps:
     path: /ms-dynamics/smartcontract/
     language: go
     README: https://github.com/Xooa/samples/blob/master/MS-Dynamics/README.md
-  Xooa-Salesforce:
-    Name: Salesforce Integration
-    Description: Xooa Salesforce Smart Contract
-    path: /salesforce/smartcontract/
-    language: go
-    README: https://github.com/Xooa/samples/blob/master/salesfoce/README.md
-  Xooa-SmartThings:
-    Name: SmartThings Integration
-    Description: Xooa SmartThings Smart Contract
-    path: /smartthings/smartcontract/
-    language: go
-    README: https://github.com/Xooa/samples/blob/master/smartthings/README.md
-  Xooa-zapier:
-    Name: Zapier Integration
-    Description: Xooa Zapier Smart Contract
-    path: /zapier/smartcontract/
-    language: go
-    README: https://github.com/Xooa/samples/blob/master/zapier/README.md
-  Xooa-QuickBooks:
-    Name: QuickBooks Integration
-    Description: Xooa QuickBooks Smart Contract
-    path: /quickbooks/smartcontract/
-    language: go
-    README: https://github.com/Xooa/samples/blob/master/quickbooks/README.md
-  Xooa-Google-Forms:
-    Name: Google Forms Integration
-    Description: Xooa Google forms Smart Contract
-    path: /google-forms/SmartContract/
-    language: go
-    README: https://github.com/Xooa/samples/blob/master/google-forms/README.md
-  Xooa-Dropbox:
-    Name: Xooa Dropbox Integration
-    Description: Xooa Dropbox Smart Contract
-    path: /dropbox/smartcontract/
-    language: go
-    README: https://github.com/Xooa/samples/blob/master/dropbox/README.md
+  
