Updated the repo with new Logging functionality SmartContract

--- a/Xooa.yaml
+++ b/Xooa.yaml
@@ -24,3 +24,10 @@ Apps:
     path: /ethereum/Get-Set-Solidity.sol
     language: solidity
     README: https://github.com/Xooa/CI-Test-SmartContract/blob/master/get-set/README.md
+    
+  Xooa-Get-Set-Long-Data:
+    Name: Xooa-Get-Set-Long-Data
+    Description: Logging should generate huge data as chaincode is returning it
+    path: /get-set/smartcontract
+    language: go
+    README: https://github.com/Xooa/CI-Test-SmartContract/blob/master/get-set/README.md  
