--- a/Xooa.yaml
+++ b/Xooa.yaml
@@ -32,9 +32,16 @@ Apps:
     language: go
     README: https://github.com/Xooa/CI-Test-SmartContract/blob/master/get-set/README.md
 
-  SmartContract-With-Swagger:
-    Name: SmartContract-With-Swagger
+  Fabric-SmartContract-With-Swagger:
+    Name: Fabric-SmartContract-With-Swagger
     Description: Xooa Get Set Smart Contract for Hyperledger Fabric with swagger json file
     path: /get-set-swagger-fabric/smartcontract
     language: go
     README: https://github.com/Xooa/CI-Test-SmartContract/blob/master/get-set/README.md
+
+  Eth-SmartContract-With-Swagger:
+    Name: Eth-SmartContract-With-Swagger
+    Description: Xooa Get Set Smart Contract for Etherum with Swagger json file
+    path: /eth-smartcontract-with-swagger/Get-Set-Solidity.sol
+    language: solidity
+    README: https://github.com/Xooa/CI-Test-SmartContract/blob/master/get-set/README.md    
